<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_edit_category"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/edit_category"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_delete_category"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/del_category"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/help"
        app:showAsAction="never|withText"/>
    <item android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/about"
        app:showAsAction="never|withText"/>
    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings"
        app:showAsAction="never|withText"/>
</menu>