<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item android:id="@+id/action_edit_category"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/edit_category"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item android:id="@+id/action_delete_category"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/del_category"
        app:showAsAction="ifRoom|collapseActionView"/>
        
</menu>