<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dlg_action_margin"
    android:paddingLeft="@dimen/dlg_action_margin"
    android:paddingRight="@dimen/dlg_action_margin"
    android:paddingBottom="@dimen/dlg_bottom_margin">

    <LinearLayout
        android:id="@+id/container" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dlg_content_margin"
        android:paddingRight="@dimen/dlg_content_margin"
        android:paddingLeft="@dimen/dlg_content_margin"
        android:paddingBottom="@dimen/dlg_action_margin"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DialogTitle"
            android:text="@string/import_data"/>
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_width="wrap_content"
            android:text="@string/file_loc"/>
        <TextView
            android:id="@+id/select"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            style="@style/Button.Flat"
            android:textAllCaps="false"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textStyle="normal"
            android:ems="3"
            android:ellipsize="start"
            android:gravity="left|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="36dp"
            android:text="@string/select_file" />
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/import_type"/>
        <Spinner android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/list_avatar_size"
            android:spinnerMode="dropdown"
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:layout_marginLeft="0dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
        <RadioGroup android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RadioButton android:id="@+id/ignore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:checked="true"
                android:text="@string/option_ignore"/>

            <RadioButton android:id="@+id/keepall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/option_keepall"/>

            <RadioButton android:id="@+id/overwrite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/option_overwrite"/>
        </RadioGroup>

    </LinearLayout>

    <Button android:id="@+id/ok"
        style="@style/Button.Flat.Accent"
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/container"
        android:text="@string/start"
        android:layout_height="wrap_content" />

    <Button android:id="@+id/cancel"
        style="@style/Button.Flat.Accent"
        android:layout_width="wrap_content"
        android:layout_below="@id/container"
        android:layout_toLeftOf="@id/ok"
        android:text="@android:string/cancel"
        android:layout_height="wrap_content" />

</RelativeLayout>
</ScrollView>