<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dlg_action_margin"
    android:paddingLeft="@dimen/dlg_action_margin"
    android:paddingRight="@dimen/dlg_action_margin"
    android:paddingBottom="@dimen/dlg_bottom_margin">

    <LinearLayout
        android:id="@+id/container" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dlg_content_margin"
        android:paddingRight="@dimen/dlg_content_margin"
        android:paddingLeft="@dimen/dlg_content_margin"
        android:paddingBottom="@dimen/dlg_action_margin"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DialogTitle"
            android:text="@string/change_pwd"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText android:id="@+id/et_cur_pwd"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:hint="@string/current_pwd"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:hint="@string/new_pwd"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/et_confirm"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_pwd"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button android:id="@+id/ok"
        style="@style/Button.Flat.Accent"
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/container"
        android:text="@android:string/ok"
        android:layout_height="wrap_content" />

    <Button android:id="@+id/cancel"
        style="@style/Button.Flat.Accent"
        android:layout_width="wrap_content"
        android:layout_below="@id/container"
        android:layout_toLeftOf="@id/ok"
        android:text="@android:string/cancel"
        android:layout_height="wrap_content" />

</RelativeLayout>
