<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dlg_action_margin"
    android:paddingLeft="@dimen/dlg_action_margin"
    android:paddingRight="@dimen/dlg_action_margin"
    android:paddingBottom="@dimen/dlg_bottom_margin">

    <LinearLayout
        android:id="@+id/container" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dlg_content_margin"
        android:paddingRight="@dimen/dlg_content_margin"
        android:paddingLeft="@dimen/dlg_content_margin"
        android:paddingBottom="@dimen/dlg_action_margin"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DialogTitle"
            android:text="@string/copy_pwd"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/warning_copy"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        
        <CheckBox android:id="@+id/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/remember_choice"/>
        
    </LinearLayout>

    <Button android:id="@+id/ok"
        style="@style/Button.Flat.Accent"
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/container"
        android:text="@android:string/ok"
        android:layout_height="wrap_content" />

    <Button android:id="@+id/cancel"
        style="@style/Button.Flat.Accent"
        android:layout_width="wrap_content"
        android:layout_below="@id/container"
        android:layout_toLeftOf="@id/ok"
        android:text="@android:string/cancel"
        android:layout_height="wrap_content" />

</RelativeLayout>
