<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="2dp"
    android:layout_marginBottom="@dimen/card_margin"
    android:elevation="@dimen/fab_small_elevation">
<RelativeLayout android:id="@+id/field_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/card_margin"
    android:paddingBottom="@dimen/card_margin"
    android:longClickable="true"
    android:background="?attr/cardViewDrawable">
    <ImageView android:id="@+id/control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_more"
        android:tint="?attr/textColorNormal"
        android:layout_centerVertical="true"
        android:layout_marginRight="8dp"
        android:contentDescription="@null"/>
    <LinearLayout android:id="@+id/line1"
        android:layout_toRightOf="@id/control"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText  android:id="@+id/field_name"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/field_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
        <Spinner android:id="@+id/field_type"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <EditText
        android:id="@+id/field_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_value"
        android:layout_below="@id/line1"
        android:layout_toRightOf="@id/control"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    <ImageButton android:id="@+id/auto_gen"
        android:layout_width="@dimen/list_avatar_size"
        android:layout_height="@dimen/list_avatar_size"
        android:layout_alignBottom="@id/field_value"
        android:layout_alignEnd="@id/field_value"
        android:layout_alignRight="@id/field_value"
        android:src="@drawable/ic_action_edit"
        android:tint="?attr/textColorNormal"
        android:visibility="invisible"
        android:contentDescription="@string/auto_gen"
        android:background="@drawable/oval_button"/>
</RelativeLayout>
</android.support.v7.widget.CardView>